tests/transpiler/x/java/fun_three_args.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 18:28:10 UTC
public class Main {
    static int sum3(int a, int b, int c) {
        return a + b + c;
    }
    public static void main(String[] args) {
        System.out.println((sum3(1, 2, 3) == null ? "nil" : sum3(1, 2, 3)));
    }
}
